# IMPC-transient-src

./: CMakeLists.txt  Makefile  README.md  dependence.inc  loopinput - 副本.case  loopinput.case  loopinput.case.bak  test.py  test.py.bak  通用后处理备份.py
IMPC2/: IMP_assembly_header.f90  IMP_assm_header.f90  IMP_driving_output.f90  IMP_driving_pre_process.f90  IMP_mathkerel.f90  IMP_re_input_header.f90  IMP_single_channel.f90  IMP_single_channel.f90.bak  IMP_single_kernel.f90  IMP_single_kernel.f90.bak  IMP_test_NK2TH.f90  TH2NK_interface_IMP.f90
NK2solver/: feedback.f90
driver/: FRNK.f90
frame/: constants.f90
header/: state_header.f90
inout/: input_plain.f90  lapack_interface.f90  output_main.f90  output_timelist.f90  output_visit.f90
loop/: IMP_property_header.f90  Imp_IHX_header.f90  Imp_IHX_header.f90.bak  Imp_THonly.f90  Imp_cal_loop.f90  Imp_cal_loop.f90.bak  Imp_coremodle_header.f90  Imp_coremodle_header.f90.bak  Imp_coremodle_pow.f90  Imp_driving_THcore.f90  Imp_driving_THcore.f90.bak  Imp_driving_postsys.f90  Imp_driving_presys.f90  Imp_driving_presys.f90.bak  Imp_driving_system.f90  Imp_inputcard.f90  Imp_inputcard.f90.bak  Imp_loop_global.f90  Imp_loop_interface.f90  Imp_loop_interface.f90.bak  Imp_pipe_header.f90  Imp_pipe_header.f90.bak  Imp_pump_header.f90  Imp_test_IHX_thermal.f90  Imp_test_PIPE_thermal.f90  Imp_test_loop.f90  Imp_test_loop_couple.f90  Imp_test_timer.f90  Imp_timer_global.f90  imp_reactor_header.f90  imp_reactor_header.f90.bak  imp_tpower_header.f90  testNK2LOOP.f90
